# pymatrix

./: .gitignore  GEMINI.md  LICENSE  README.md  SHOWCASE.md  Terminal_Configuration.md  pymatrix.py
pymatrix/: README.md  pyproject.toml  setup.py
pymatrix/assets/: pymatrix-site.html  pymatrix.py
pymatrix/pymatrix/: cli.py  colors.py  engine.py  main.py
pymatrix/pymatrix.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
pymatrix/scripts/: install.sh  uninstall.sh
pymatrix/src/pymatrix/: pymatrix.py
pymatrix/src/pymatrix.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
pymatrix/tests/: mem_test.py  test_cli.py  test_colors.py  test_engine.py
rmatrix/: README.md  pyproject.toml
rmatrix/rmatrix/: __init__.py  cli.py  colors.py  main.py
rmatrix/rmatrix.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
rmatrix/scripts/: install.sh  uninstall.sh
rmatrix/tests/: mem_test.py  test_cli.py  test_colors.py  test_engine.py
web/: .gitignore  package-lock.json  package.json
web/app/: globals.css  layout.tsx  page.tsx
web/app/about/: page.tsx
web/app/docs/: page.tsx
web/app/landing/: page.tsx
web/app/requirements/: page.tsx
web/components/: CopyButton.tsx  MatrixRain.tsx  Navbar.tsx
web/src/app/: globals.css  layout.tsx  page.tsx
web/src/app/about/: page.tsx
web/src/app/docs/: page.tsx
web/src/app/showcase/: page.tsx
web/src/components/: BorderBeam.tsx  CommandBlock.tsx  ElectricBorder.tsx  MatrixRain.tsx
web/src/components/About/: ConnectPane.tsx  InfoPane.tsx
web/src/components/Docs/: ColorPalettes.tsx  FlagsTable.tsx  Installation.tsx  Requirements.tsx  Sidebar.tsx  Usage.tsx
web/src/components/Home/: CTA.tsx  Features.tsx  Hero.tsx  LiveDemo.tsx
web/src/components/Showcase/: Carousel.tsx
web/src/constants/: index.ts
web/src/types/: index.ts
