[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pymatrix"
version = "1.0.0"
description = "Matrix-style terminal rain animation"
readme = "README.md"
requires-python = ">=3.6"
license = {text = "MIT"}
authors = [
    {name = "Nihal Sheikh", email = "nihalsheikh@example.com"}
]
keywords = ["terminal", "animation", "matrix", "curses", "cli"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Terminals",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.urls]
Homepage = "https://github.com/nihalsheikh/pymatrix"
Documentation = "https://github.com/nihalsheikh/pymatrix/wiki"
Repository = "https://github.com/nihalsheikh/pymatrix.git"
Issues = "https://github.com/nihalsheikh/pymatrix/issues"

[project.scripts]
pymatrix = "pymatrix.pymatrix:main"
pym = "pymatrix.pymatrix:main"

[tool.setuptools.packages.find]
where = ["src"]
include = ["pymatrix*"]

[tool.setuptools.package-data]
pymatrix = []
