[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pymatrix"
version = "0.1.0"
authors = [
  { name="Nihal Sheikh", email="nihalsheikh585@gmail.com" },
]
description = "A fun and creative Matrix digital rain animation for your terminal."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.6"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Environment :: Console",
    "Topic :: Games/Entertainment",
]
dependencies = [
    "windows-curses;platform_system=='Windows'",
]

[project.urls]
"Homepage" = "https://github.com/nihalsheikh/pymatrix"
"Bug Tracker" = "https://github.com/nihalsheikh/pymatrix/issues"
"Official Website" = "https://pymatrix.vercel.app"

[project.scripts]
pymatrix = "pymatrix.main:main"
pym = "pymatrix.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["pymatrix*"]
